Update project title

--- a/post1.html
+++ b/post1.html
@@ -59,7 +59,7 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
-                    <p>Welcome to our blog for our project titled: “Project Title Here”. Stay tuned for our regular updates!</p>
+                    <p>Welcome to our blog for our project titled: “Lip-Speech to Text for the Hearing Impaired: Multi-Modal Approach Using Visual-and-Language Transformer”. Stay tuned for our regular updates!</p>
                 </div>
             </div>
         </div>
