--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <p>Nadine Amin: Ph.D. student in Computer and Information Technology at Purdue University</p>
                     <p>Srushti: </p>
-                    <p>Yi: </p>
+                    <p>Yi Zhang: </p>
                 </div>
             </div>
         </div>
