--- a/about.html
+++ b/about.html
@@ -56,9 +56,17 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
-                    <p>Nadine Amin: Ph.D. student in Computer and Information Technology at Purdue University</p>
-                    <p>Srushti: </p>
-                    <p>Yi Zhang: </p>
+                    <p><b>Nadine Amin</b>
+                        </br>
+                        Ph.D. student in Computer and Information Technology at Purdue University</p>
+
+                    <p><b>Srushti</b>
+                        </br>
+                        placeholder placeholder</p>
+
+                    <p><b>Yi Zhang</b>
+                        </br>
+                        Ph.D. student in Computer and Information Technology at Purdue University</p>
                 </div>
             </div>
         </div>
