--- a/about.html
+++ b/about.html
@@ -60,9 +60,9 @@
                         </br>
                         Ph.D. student in Computer and Information Technology at Purdue University</p>
 
-                    <p><b>Srushti</b>
+                    <p><b>Srushti Vichare</b>
                         </br>
-                        placeholder placeholder</p>
+                        Master's student in Engineering Technology at Purdue University</p>
 
                     <p><b>Yi Zhang</b>
                         </br>
