--- a/post1.html
+++ b/post1.html
@@ -47,7 +47,7 @@
                         <h1>Week 6: Blog Post #1</h1>
                         <h2 class="subheading">Launching our Project Blog!</h2>
                         <span class="meta">
-                            Posted on September 27, 2022
+                            Posted by <a href="#">Yi</a> on September 27, 2022
                         </span>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
-                    <p>Welcome to our blog for our project titled: “Lip-Speech to Text for the Hearing Impaired: Multi-Modal Approach Using Visual-and-Language Transformer”. Stay tuned for our regular updates!</p>
+                    <p>Welcome to our blog for our project titled: “Lip-Speech to Text for the Hearing Impaired: Multi-Modal Approach Using Vision-and-Language Transformer”. Stay tuned for our regular updates!</p>
                 </div>
             </div>
         </div>
