--- a/post5.html
+++ b/post5.html
@@ -106,9 +106,8 @@
                     
                     <h4><strong>Next Steps</strong></h4> 
                     <p> We are currently working on fine-tuning the pre-trained ViLT model on our fine-tuning dataset so that we can then re-evaluate its performance
-                        on our testing dataset. With such a low zero-shot accuracy and small fine-tuning dataset, we suspect that the accuracy after fine-tuning 
-                        would not really go up that much. After fine-tuning and evaluating the ViLT model, we plan on documenting why we think the ViLT model might be 
-                        performing poorly, and what are possible future directions that we believe might be worth pursuing.
+                        on our testing dataset. We will compare its performance with that of a random guesser and an encoder-decoder approach using CNN and LSTM.
+                        We will also discuss possible future directions that we believe might be worth pursuing.
                     </p>
                                 
                 </div>
