--- a/post3.html
+++ b/post3.html
@@ -62,7 +62,7 @@
                     <h4><strong>Data Preprocessing</strong></h4> 
                     <p>Before we can configure and train our model, we need to appropriately preprocess the data to be ready for being inputted into our model.
                         Since images in our dataset are characterized by having a lot of background that is not really relevant to our task of lip-reading, 
-                        an appropriate preprocessing step was to crop out such unneccessary regions. This saves our model meaningless computations that it 
+                        an appropriate preprocessing step was to crop out such unnecessary regions. This saves our model meaningless computations that it 
                         would otherwise have to carry out. 
                     </p> 
                     
