--- a/post6.html
+++ b/post6.html
@@ -102,7 +102,7 @@
                         From the above conclusions, we put forward the following potential future directions:
                         <ul>
                             <li>We need to check whether the ViLT model has overfitted.</li>
-                            <li>We can possibly try taking as input the video and directly perform 3D volume embedding in order to simplify the data preprocessing step.</li>
+                            <li>We can possibly try taking as input the video and directly performing 3D volume embedding in order to simplify the data preprocessing step.</li>
                             <li>We should probably use a better dataset that not only contains more instances, more words and more phrases, but that is also more balanced.</li>
                             <li>With this potential from the ViLT, other lightweight models should also be investigated.</li>
                             <li>We can move on to deploy the model onto portable devices.</li>
